--- a/src/style.css
+++ b/src/style.css
@@ -7,8 +7,9 @@
 body {
   width: 100%;
   min-height: 100vh;
- background: rgb(238,174,202);
-background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+background-image:url(../src/assets/bg1.jpg);
+background-repeat: no-repeat;
+background-size: cover;
   display: flex;
   justify-content: center;
   align-items: center;
